<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <com.github.florent37.diagonallayout.DiagonalLayout
        android:id="@+id/diagonalLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:elevation="0dp"
        android:paddingBottom="16dp"
        diagonal:diagonal_angle="10"
        diagonal:diagonal_direction="left"
        diagonal:diagonal_position="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_background"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/CDVD"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="italic"
            android:typeface="serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/SoLienLac"
            android:textColor="@color/colorWhite"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

    </com.github.florent37.diagonallayout.DiagonalLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/diagonallayout_circle"
        android:src="@drawable/logo" />

    <ScrollView
        android:layout_below="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/MSSV"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/edtMSSV"
                    android:text="1606020033"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Password"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:typeface="serif" />

                <EditText
                    android:text="123456"
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:text="@string/ForgotPass"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/Login"
                    android:textColor="@drawable/custom_text_button" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>